# diff-blup

./: .gitignore  LICENSE  README.md  blup  blup_distribution.py  blup_server.py  blup_timeline.py  blup_trace.py  blup_utils.py  pyproject.toml  pyrightconfig.json  requirements.txt
blup_src/: controller.py  data_model.py  main.py  state.py  trace_session.py  utils.py
blup_src/adapters/: quanta_adapter.py  summary_adapter.py
blup_src/views/: inspector_view.py  quanta_comparison_view.py  summary_diff_view.py
old_code/: blup_components.py  blup_distribution.py  blup_server.py  blup_stats.py  blup_timeline.py  blup_trace.py
