[project]
name = "blup"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.2",
    "otf2>=3.1.1",
    "pallas-trace",
    "pybind11>=3.0.1",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]

[tool.uv.sources]
pallas-trace = { path = "../pallas-fork/libraries/pallas_python", editable = true }

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv"]
extraPaths = [
    "../pallas-fork/libraries/pallas_python",
]
